--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "install": "^0.13.0",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
+    "npm": "^11.1.0",
     "sequelize": "^6.37.5"
   }
 }
