--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "install": "^0.13.0",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
     "npm": "^11.1.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "validator": "^13.12.0"
   }
 }
